--- a/package.json
+++ b/package.json
@@ -9,108 +9,108 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.1",
-    "@mdx-js/react": "^1.5.1",
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
     "acorn": "^7.1.0",
-    "algoliasearch": "^3.35.1",
-    "axios": "^0.19.0",
-    "babel-plugin-styled-components": "^1.10.6",
-    "downshift": "^3.4.7",
+    "algoliasearch": "^4.0.3",
+    "axios": "^0.19.2",
+    "babel-plugin-styled-components": "^1.10.7",
+    "downshift": "^5.0.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "framer-motion": "^1.6.17",
-    "gatsby": "^2.18.7",
-    "gatsby-background-image": "^0.9.11",
-    "gatsby-cli": "^2.8.16",
-    "gatsby-image": "^2.2.36",
+    "framer-motion": "^1.8.4",
+    "gatsby": "^2.19.18",
+    "gatsby-background-image": "^0.10.0",
+    "gatsby-cli": "^2.8.30",
+    "gatsby-image": "^2.2.41",
     "gatsby-plugin-algolia": "^0.5.0",
-    "gatsby-plugin-feed": "^2.3.23",
-    "gatsby-plugin-google-analytics": "^2.1.31",
-    "gatsby-plugin-manifest": "^2.2.31",
-    "gatsby-plugin-mdx": "^1.0.62",
-    "gatsby-plugin-offline": "^3.0.27",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-feed": "^2.3.27",
+    "gatsby-plugin-google-analytics": "^2.1.35",
+    "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-mdx": "^1.0.73",
+    "gatsby-plugin-offline": "^3.0.35",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-plugin-sitemap": "^2.2.24",
-    "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-plugin-typography": "^2.3.22",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.1",
-    "gatsby-remark-images": "^3.1.37",
-    "gatsby-remark-prismjs": "^3.3.27",
-    "gatsby-remark-responsive-iframe": "^2.2.30",
-    "gatsby-remark-smartypants": "^2.1.19",
-    "gatsby-source-filesystem": "2.1.42",
-    "gatsby-transformer-json": "^2.2.22",
-    "gatsby-transformer-remark": "^2.6.39",
-    "gatsby-transformer-sharp": "^2.3.7",
-    "polished": "^3.4.2",
-    "prismjs": "^1.17.1",
+    "gatsby-remark-images": "^3.1.44",
+    "gatsby-remark-prismjs": "^3.3.31",
+    "gatsby-remark-responsive-iframe": "^2.2.32",
+    "gatsby-remark-smartypants": "^2.1.21",
+    "gatsby-source-filesystem": "2.1.48",
+    "gatsby-transformer-json": "^2.2.26",
+    "gatsby-transformer-remark": "^2.6.52",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "polished": "^3.4.4",
+    "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.8.0",
-    "react-instantsearch-dom": "^6.0.0",
+    "react-icons": "^3.9.0",
+    "react-instantsearch-dom": "^6.3.0",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
-    "serve": "^11.2.0",
-    "styled-components": "^4.4.1",
+    "serve": "^11.3.0",
+    "styled-components": "^5.0.1",
     "styled-theming": "^2.2.0",
     "typeface-raleway": "^0.0.75",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@octokit/rest": "^16.35.0",
-    "@storybook/addon-a11y": "^5.2.8",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-backgrounds": "^5.2.8",
-    "@storybook/addon-knobs": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/addons": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "@storybook/theming": "^5.2.8",
-    "@testing-library/cypress": "^5.0.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.3",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@octokit/rest": "^16.43.1",
+    "@storybook/addon-a11y": "^5.3.13",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-backgrounds": "^5.3.13",
+    "@storybook/addon-knobs": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/addons": "^5.3.13",
+    "@storybook/react": "^5.3.13",
+    "@storybook/theming": "^5.3.13",
+    "@testing-library/cypress": "^5.3.0",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.26",
+    "babel-preset-gatsby": "^0.2.29",
     "bundlesize": "^0.18.0",
-    "core-js": "3.5.0",
-    "cypress": "^3.7.0",
-    "cz-conventional-changelog": "3.0.2",
-    "eslint": "^6.7.2",
+    "core-js": "3.6.4",
+    "cypress": "^4.0.2",
+    "cz-conventional-changelog": "3.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-react-app": "^5.1.0",
+    "eslint-config-react-app": "^5.2.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-cypress": "^2.7.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-cypress": "^2.10.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.3",
     "gatsby-plugin-eslint": "^2.0.8",
-    "husky": "^3.1.0",
+    "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "jest-styled-components": "^6.3.4",
-    "jsdom": "^15.2.1",
+    "jest": "^25.1.0",
+    "jest-styled-components": "^7.0.0",
+    "jsdom": "^16.2.0",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^9.5.0",
-    "now": "^16.6.2",
+    "lint-staged": "^10.0.7",
+    "now": "^17.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.12.0",
-    "start-server-and-test": "^1.10.6",
+    "start-server-and-test": "^1.10.8",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
@@ -122,6 +122,7 @@
     "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
     "build:prod": "PUBLISH_ON_NOW=production gatsby build",
     "develop": "npm-run-all -p dev storybook",
+    "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "format": "npm run prettier --write 'src/**/*.js'",
