--- a/package.json
+++ b/package.json
@@ -9,56 +9,56 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.8",
-    "@mdx-js/react": "^1.5.8",
+    "@mdx-js/mdx": "^1.5.9",
+    "@mdx-js/react": "^1.5.9",
     "@reach/router": "^1.3.3",
     "@svgr/webpack": "^5.3.1",
-    "@yarnpkg/pnpify": "^2.0.0-rc.20",
+    "@yarnpkg/pnpify": "^2.0.0-rc.21",
     "acorn": "^7.1.1",
-    "algoliasearch": "^4.1.0",
+    "algoliasearch": "^4.2.0",
     "axios": "^0.19.2",
-    "babel-plugin-remove-graphql-queries": "^2.8.1",
+    "babel-plugin-remove-graphql-queries": "^2.8.5",
     "babel-plugin-styled-components": "^1.10.7",
-    "downshift": "^5.1.0",
+    "downshift": "^5.1.1",
     "eslint-plugin-react-hooks": "^3.0.0",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.18",
-    "gatsby-background-image": "^1.0.1",
-    "gatsby-cli": "^2.11.7",
-    "gatsby-image": "^2.3.2",
-    "gatsby-plugin-algolia": "^0.7.0",
-    "gatsby-plugin-feed": "^2.4.1",
-    "gatsby-plugin-google-analytics": "^2.2.2",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-mdx": "^1.1.7",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.2",
+    "gatsby": "^2.20.35",
+    "gatsby-background-image": "^1.1.1",
+    "gatsby-cli": "^2.11.21",
+    "gatsby-image": "^2.3.5",
+    "gatsby-plugin-algolia": "^0.9.0",
+    "gatsby-plugin-feed": "^2.4.4",
+    "gatsby-plugin-google-analytics": "^2.2.5",
+    "gatsby-plugin-manifest": "^2.3.7",
+    "gatsby-plugin-mdx": "^1.1.11",
+    "gatsby-plugin-offline": "^3.1.5",
+    "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-plugin-sitemap": "^2.3.1",
-    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-plugin-sharp": "^2.5.7",
+    "gatsby-plugin-sitemap": "^2.3.6",
+    "gatsby-plugin-styled-components": "^3.2.4",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-plugin-typography": "^2.4.4",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.1",
-    "gatsby-remark-images": "^3.2.2",
-    "gatsby-remark-prismjs": "^3.4.1",
-    "gatsby-remark-responsive-iframe": "^2.3.1",
-    "gatsby-remark-smartypants": "^2.2.1",
-    "gatsby-source-filesystem": "2.2.2",
-    "gatsby-transformer-json": "^2.3.1",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.4.4",
+    "gatsby-remark-images": "^3.2.6",
+    "gatsby-remark-prismjs": "^3.4.5",
+    "gatsby-remark-responsive-iframe": "^2.3.4",
+    "gatsby-remark-smartypants": "^2.2.4",
+    "gatsby-source-filesystem": "2.2.5",
+    "gatsby-transformer-json": "^2.3.4",
+    "gatsby-transformer-remark": "^2.7.5",
+    "gatsby-transformer-sharp": "^2.4.7",
     "minimatch": "^3.0.4",
     "pify": "^5.0.0",
-    "polished": "^3.5.1",
+    "polished": "^3.5.2",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-icons": "^3.9.0",
+    "react-icons": "^3.10.0",
     "react-instantsearch-dom": "^6.4.0",
     "react-is": "^16.13.1",
     "react-simple-maps": "^2.0.0",
@@ -78,32 +78,32 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/runtime": "^7.9.2",
-    "@octokit/rest": "^17.2.0",
-    "@storybook/addon-a11y": "^6.0.0-alpha.32",
-    "@storybook/addon-actions": "^6.0.0-alpha.32",
-    "@storybook/addon-backgrounds": "^6.0.0-alpha.32",
-    "@storybook/addon-knobs": "^6.0.0-alpha.32",
-    "@storybook/addon-links": "^6.0.0-alpha.32",
-    "@storybook/addons": "^6.0.0-alpha.32",
-    "@storybook/react": "^6.0.0-alpha.32",
-    "@storybook/theming": "^6.0.0-alpha.32",
+    "@octokit/rest": "^17.6.0",
+    "@storybook/addon-a11y": "^6.0.0-alpha.43",
+    "@storybook/addon-actions": "^6.0.0-alpha.43",
+    "@storybook/addon-backgrounds": "^6.0.0-alpha.43",
+    "@storybook/addon-knobs": "^6.0.0-alpha.43",
+    "@storybook/addon-links": "^6.0.0-alpha.43",
+    "@storybook/addons": "^6.0.0-alpha.43",
+    "@storybook/react": "^6.0.0-alpha.43",
+    "@storybook/theming": "^6.0.0-alpha.43",
     "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
+    "@testing-library/react": "^10.0.3",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.3.0",
+    "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
-    "babel-preset-gatsby": "^0.3.1",
+    "babel-preset-gatsby": "^0.3.3",
     "bundlesize": "^0.18.0",
     "core-js": "3.6.5",
-    "cypress": "^4.3.0",
+    "cypress": "^4.4.1",
     "cz-conventional-changelog": "3.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-react-app": "^5.2.1",
-    "eslint-loader": "^4.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -111,17 +111,18 @@
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.3.0",
+    "jest": "^25.4.0",
     "jest-styled-components": "^7.0.2",
     "jsdom": "^16.2.2",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^10.1.3",
-    "now": "^17.1.1",
+    "lint-staged": "^10.1.7",
+    "now": "^18.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
+    "regenerator-runtime": "^0.13.5",
     "slash": "^3.0.0",
-    "start-server-and-test": "^1.10.11",
+    "start-server-and-test": "^1.11.0",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
