--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@mdx-js/react": "^1.5.9",
     "@reach/router": "^1.3.3",
     "@svgr/webpack": "^5.3.1",
-    "@yarnpkg/pnpify": "^2.0.0-rc.21",
     "acorn": "^7.1.1",
     "algoliasearch": "^4.2.0",
     "axios": "^0.19.2",
@@ -79,14 +78,14 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/runtime": "^7.9.2",
     "@octokit/rest": "^17.6.0",
-    "@storybook/addon-a11y": "^6.0.0-alpha.43",
-    "@storybook/addon-actions": "^6.0.0-alpha.43",
-    "@storybook/addon-backgrounds": "^6.0.0-alpha.43",
-    "@storybook/addon-knobs": "^6.0.0-alpha.43",
-    "@storybook/addon-links": "^6.0.0-alpha.43",
-    "@storybook/addons": "^6.0.0-alpha.43",
-    "@storybook/react": "^6.0.0-alpha.43",
-    "@storybook/theming": "^6.0.0-alpha.43",
+    "@storybook/addon-a11y": "^5.3.18",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-backgrounds": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "@storybook/theming": "^5.3.18",
     "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
