--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
   "*.js": ["eslint"],
-  "*.+(js|jsx|json|yml|css|less|scss|ts|tsx|md|graphql|mdx)": ["prettier --ignore-path .gitignore --write", "git add"]
+  "*.+(js|jsx|json|yml|css|less|scss|ts|tsx|md|graphql|mdx)": ["prettier --ignore-path .gitignore --write"]
 }
