--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/core": "^9.0.0-rc.3",
     "@react-spring/three": "^9.0.0-rc.3",
     "@react-spring/web": "^9.0.0-rc.3",
+    "@react-three/drei": "^2.2.3",
     "@svgr/webpack": "^5.4.0",
     "acorn": "^8.0.4",
     "algoliasearch": "^4.5.1",
@@ -22,38 +23,37 @@
     "babel-plugin-remove-graphql-queries": "^2.9.20",
     "babel-plugin-styled-components": "^1.11.1",
     "downshift": "^6.0.6",
-    "drei": "^1.5.7",
     "eslint-plugin-react-hooks": "^4.2.0",
     "framer-motion": "^2.9.4",
-    "gatsby": "^2.24.91",
+    "gatsby": "^2.25.2",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-cli": "^2.12.113",
+    "gatsby-cli": "^2.12.116",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-algolia": "^0.14.1",
-    "gatsby-plugin-feed": "^2.5.20",
-    "gatsby-plugin-google-analytics": "^2.3.19",
-    "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-mdx": "^1.2.52",
-    "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-algolia": "^0.15.0",
+    "gatsby-plugin-feed": "^2.6.0",
+    "gatsby-plugin-google-analytics": "^2.4.0",
+    "gatsby-plugin-manifest": "^2.5.2",
+    "gatsby-plugin-mdx": "^1.3.1",
+    "gatsby-plugin-offline": "^3.3.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-sitemap": "^2.5.0",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typography": "^2.5.13",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.3.16",
+    "gatsby-remark-autolink-headers": "^2.4.1",
     "gatsby-remark-embed-video": "^3.0.10",
-    "gatsby-remark-images": "^3.3.40",
-    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-remark-images": "^3.4.1",
+    "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-source-filesystem": "^2.4.1",
     "gatsby-transformer-json": "^2.4.15",
-    "gatsby-transformer-remark": "^2.8.47",
-    "gatsby-transformer-sharp": "^2.5.20",
+    "gatsby-transformer-remark": "^2.9.2",
+    "gatsby-transformer-sharp": "^2.5.21",
     "i": "^0.3.6",
     "install": "^0.13.0",
     "lerp": "^1.0.3",
@@ -71,13 +71,13 @@
     "react-icons": "^3.11.0",
     "react-instantsearch-dom": "^6.8.2",
     "react-is": "^17.0.1",
-    "react-simple-maps": "^2.2.0",
+    "react-simple-maps": "^2.3.0",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^5.1.4",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
     "serve": "^11.3.2",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
     "three": "^0.122.0",
     "typeface-raleway": "^1.1.13",
@@ -92,14 +92,14 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "@octokit/rest": "^18.0.6",
-    "@storybook/addon-a11y": "^6.0.27",
-    "@storybook/addon-actions": "^6.0.27",
-    "@storybook/addon-backgrounds": "^6.0.27",
-    "@storybook/addon-knobs": "^6.0.27",
-    "@storybook/addon-links": "^6.0.27",
-    "@storybook/addons": "^6.0.27",
-    "@storybook/react": "^6.0.27",
-    "@storybook/theming": "^6.0.27",
+    "@storybook/addon-a11y": "^6.0.28",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-backgrounds": "^6.0.28",
+    "@storybook/addon-knobs": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/addons": "^6.0.28",
+    "@storybook/react": "^6.0.28",
+    "@storybook/theming": "^6.0.28",
     "@testing-library/cypress": "^7.0.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
