--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-cli": "^2.12.116",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-algolia": "^0.15.0",
+    "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-feed": "^2.6.0",
     "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-manifest": "^2.5.2",
@@ -134,6 +135,7 @@
     "prettier": "^2.1.2",
     "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
+    "replace-in-file": "^6.1.0",
     "slash": "^3.0.0",
     "start-server-and-test": "^1.11.5",
     "webpagetest": "^0.4.0"
@@ -144,9 +146,9 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
-    "build:prod": "PUBLISH_ON_NOW=production gatsby build",
-    "develop": "npm-run-all -p dev storybook",
+    "build": "node postinstall.js && PUBLISH_ON_NOW=branch-deploy gatsby build",
+    "build:prod": "node postinstall.js && PUBLISH_ON_NOW=production gatsby build",
+    "develop": "node postinstall.js && npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
