--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-cli": "^2.12.72",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-algolia": "^0.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.0",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.3",
