--- a/package.json
+++ b/package.json
@@ -9,35 +9,34 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.1",
-    "@mdx-js/react": "^1.6.1",
-    "@reach/router": "^1.3.3",
-    "@svgr/webpack": "^5.4.0",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
+    "@reach/router": "^1.3.4",
+    "@react-three/drei": "^2.2.7",
+    "@svgr/webpack": "^5.5.0",
     "acorn": "^7.2.0",
-    "algoliasearch": "^4.2.0",
-    "axios": "^0.19.2",
-    "babel-plugin-remove-graphql-queries": "^2.9.1",
-    "babel-plugin-styled-components": "^1.10.7",
-    "downshift": "^5.4.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "framer-motion": "^1.11.0",
-    "gatsby": "^2.23.20",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-cli": "^2.12.72",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-algolia": "^0.11.0",
+    "algoliasearch": "^4.8.2",
+    "babel-plugin-remove-graphql-queries": "^2.11.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "downshift": "^6.0.6",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^2.9.4",
+    "gatsby": "^2.27.5",
+    "gatsby-background-image": "^1.3.1",
+    "gatsby-cli": "^2.14.1",
+    "gatsby-image": "^2.6.0",
+    "gatsby-plugin-algolia": "^0.16.1",
     "gatsby-plugin-anchor-links": "^1.2.0",
-    "gatsby-plugin-feed": "^2.5.1",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-mdx": "^1.2.7",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-feed": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-mdx": "^1.5.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-sitemap": "^2.4.2",
-    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-sharp": "^2.9.1",
+    "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typography": "^2.7.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
@@ -55,7 +54,6 @@
     "install": "^0.13.0",
     "lerp": "^1.0.3",
     "minimatch": "^3.0.4",
-    "npm": "^6.14.9",
     "pify": "^5.0.0",
     "polished": "^4.0.5",
     "postprocessing": "^6.18.0",
@@ -70,10 +68,9 @@
     "react-is": "^17.0.1",
     "react-simple-maps": "^2.3.0",
     "react-spring": "^9.0.0-rc.3",
-    "react-three-fiber": "^5.3.3",
+    "react-three-fiber": "^5.3.4",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
-    "serve": "^11.3.2",
     "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
     "three": "^0.123.0",
@@ -81,6 +78,7 @@
     "typography": "^0.16.19"
   },
   "devDependencies": {
+    "serve": "^11.3.2",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
