--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^1.6.21",
     "@reach/router": "^1.3.4",
     "@react-three/drei": "^2.2.7",
+    "@sentry/gatsby": "^5.29.1",
     "@svgr/webpack": "^5.5.0",
     "acorn": "^7.2.0",
     "algoliasearch": "^4.8.2",
