--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^2.2.12",
+    "@react-three/drei": "^2.2.15",
     "@sentry/gatsby": "^5.29.2",
     "@svgr/webpack": "^5.5.0",
     "acorn": "^8.0.4",
@@ -21,43 +21,43 @@
     "babel-plugin-styled-components": "^1.12.0",
     "downshift": "^6.0.7",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^3.0.0",
-    "gatsby": "^2.29.1",
+    "framer-motion": "^3.1.4",
+    "gatsby": "^2.30.1",
     "gatsby-background-image": "^1.3.1",
-    "gatsby-cli": "^2.16.1",
-    "gatsby-image": "^2.8.0",
+    "gatsby-cli": "^2.17.0",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-algolia": "^0.16.2",
-    "gatsby-plugin-feed": "^2.10.0",
-    "gatsby-plugin-manifest": "^2.9.0",
-    "gatsby-plugin-mdx": "^1.7.0",
-    "gatsby-plugin-offline": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-feed": "^2.11.0",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.11.1",
-    "gatsby-plugin-sitemap": "^2.9.0",
-    "gatsby-plugin-styled-components": "^3.7.0",
-    "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.9.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-sitemap": "^2.10.0",
+    "gatsby-plugin-styled-components": "^3.8.0",
+    "gatsby-plugin-svgr": "^2.1.0",
+    "gatsby-plugin-typography": "^2.10.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.8.0",
+    "gatsby-remark-autolink-headers": "^2.9.0",
     "gatsby-remark-embed-video": "^3.0.10",
-    "gatsby-remark-images": "^3.8.0",
-    "gatsby-remark-prismjs": "^3.10.0",
-    "gatsby-remark-responsive-iframe": "^2.8.0",
-    "gatsby-remark-smartypants": "^2.7.0",
-    "gatsby-source-filesystem": "^2.8.0",
-    "gatsby-transformer-json": "^2.8.0",
-    "gatsby-transformer-remark": "^2.13.0",
-    "gatsby-transformer-sharp": "^2.9.0",
+    "gatsby-remark-images": "^3.9.0",
+    "gatsby-remark-prismjs": "^3.11.0",
+    "gatsby-remark-responsive-iframe": "^2.9.0",
+    "gatsby-remark-smartypants": "^2.8.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "gatsby-transformer-json": "^2.9.0",
+    "gatsby-transformer-remark": "^2.14.0",
+    "gatsby-transformer-sharp": "^2.10.0",
     "i": "^0.3.6",
     "install": "^0.13.0",
     "lerp": "^1.0.3",
     "minimatch": "^3.0.4",
     "pify": "^5.0.0",
     "polished": "^4.0.5",
-    "postprocessing": "^6.18.0",
-    "prismjs": "^1.22.0",
+    "postprocessing": "^6.19.1",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-adaptive-hooks": "0.0.8",
@@ -73,23 +73,23 @@
     "react-useportal": "^1.0.13",
     "styled-components": "^5.2.1",
     "styled-theming": "^2.2.0",
-    "three": "^0.123.0",
+    "three": "^0.124.0",
     "typeface-raleway": "^1.1.13",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "serve": "^11.3.2",
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@octokit/rest": "^18.0.12",
     "@storybook/addon-a11y": "^6.1.11",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-backgrounds": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-knobs": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/addons": "^6.1.11",
@@ -97,32 +97,32 @@
     "@storybook/theming": "^6.1.11",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/react": "^11.2.3",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-gatsby": "^0.9.0",
-    "bundlesize": "^0.18.0",
-    "core-js": "3.8.1",
-    "cypress": "^6.1.0",
+    "babel-preset-gatsby": "^0.10.0",
+    "bundlesize": "^0.18.1",
+    "core-js": "3.8.2",
+    "cypress": "^6.2.1",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.15.0",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "gatsby-plugin-eslint": "^2.0.8",
-    "husky": "^4.3.6",
+    "husky": "^4.3.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.3",
     "jsdom": "^16.4.0",
-    "lighthouse-ci": "1.11.0",
+    "lighthouse-ci": "1.12.0",
     "lint-staged": "^10.5.3",
     "now": "^21.0.1",
     "npm-run-all": "^4.1.5",
@@ -130,8 +130,9 @@
     "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
     "replace-in-file": "^6.1.0",
+    "serve": "^11.3.2",
     "slash": "^3.0.0",
-    "start-server-and-test": "^1.11.6",
+    "start-server-and-test": "^1.11.7",
     "webpagetest": "^0.4.0"
   },
   "keywords": [
@@ -142,7 +143,7 @@
   "scripts": {
     "build": "node postinstall.js && PUBLISH_ON_NOW=branch-deploy gatsby build",
     "build:prod": "node postinstall.js && PUBLISH_ON_NOW=production gatsby build",
-    "develop": "node postinstall.js && npm-run-all -p dev storybook",
+    "develop": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 node postinstall.js && npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
