--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-mdx": "^1.9.0",
     "gatsby-plugin-offline": "^3.9.0",
+    "gatsby-plugin-preact": "^4.6.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
@@ -57,6 +58,8 @@
     "pify": "^5.0.0",
     "polished": "^4.1.0",
     "postprocessing": "^6.20.0",
+    "preact": "^10.5.12",
+    "preact-render-to-string": "^5.1.12",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -185,5 +188,10 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "browserslist": [
+    ">0.25%",
+    "not ie 11",
+    "not op_mini all"
+  ]
 }
